--- a/.github/workflow/nodejs.yml
+++ b/.github/workflow/nodejs.yml
@@ -19,7 +19,7 @@ env:
   ECR_REPOSITORY: nodejs-app           # set this to your Amazon ECR repository name
   ECS_SERVICE: nodejs-service-t1wqqqva                 # set this to your Amazon ECS service name
   ECS_CLUSTER: test                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: nodejs # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: .aws/taskdef.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: nodejs           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
@@ -54,7 +54,7 @@ jobs:
           # Build a docker container and
           # push it to ECR so that it can
           # be deployed to ECS.
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./Nodejs
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
