--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -19,7 +19,7 @@ env:
   ECR_REPOSITORY: nodejs           # set this to your Amazon ECR repository name
   ECS_SERVICE: node_react                 # set this to your Amazon ECS service name
   ECS_CLUSTER: node-react                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: node_react # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: .aws/taskdef.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: react_movie           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
